[gd_scene load_steps=3 format=3 uid="uid://cnq1fogoewemd"]

[ext_resource type="Script" uid="uid://dy0x43s04n867" path="res://addons/parley/components/dialogue_option/dialogue_option_node_editor.gd" id="1_3b5a7"]
[ext_resource type="PackedScene" uid="uid://m3v11vm16l8y" path="res://addons/parley/components/node/node_editor.tscn" id="1_acvks"]

[node name="DialogueOptionNodeEditor" instance=ExtResource("1_acvks")]
script = ExtResource("1_3b5a7")
character = ""
option = ""
type = 1

[node name="TitleLabel" parent="TitleContainer/TitlePanelContainer/TitleMarginContainer/TitlePartsContainer" index="0"]
text = "Dialogue Option [ID: ]"

[node name="CharacterContainer" type="HBoxContainer" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer/CharacterContainer" index="0"]
layout_mode = 2
text = "Character:"

[node name="CharacterSelector" type="OptionButton" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer/CharacterContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 3
clip_text = true

[node name="VBoxContainer" type="VBoxContainer" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer" index="1"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer/VBoxContainer" index="0"]
layout_mode = 2
text = "Text: "

[node name="OptionEditor" type="TextEdit" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer/VBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Dialogue goes here.."
wrap_mode = 1

[connection signal="item_selected" from="BodyMarginContainer/BodyScrollContainer/BodyContainer/CharacterContainer/CharacterSelector" to="." method="_on_character_selector_item_selected"]
[connection signal="text_changed" from="BodyMarginContainer/BodyScrollContainer/BodyContainer/VBoxContainer/OptionEditor" to="." method="_on_code_edit_text_changed"]
